# gh-find-code-mcp

./: README.md  pyproject.toml
gh_find_code_mcp/: main.py
