[project]
name = "gh-find-code-mcp"
version = "0.1.0"
description = "An MCP server to find code on GitHub via gh search repos"
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[project.scripts]
gh-find-code-mcp = "gh_find_code_mcp.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
